<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/quizText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="sans-serif"
        android:padding="3dp"
        android:text="@string/quiz"
        android:textSize="@dimen/tvSize"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/startQuiz"
        android:text="@string/start"
        android:onClick="startQuiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizText"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        />
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/results"
        android:text="@string/results"
        android:onClick="showResults"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startQuiz"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        />

</androidx.constraintlayout.widget.ConstraintLayout>