<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ResultsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvResults"
        android:textSize="@dimen/tvSize"
        android:padding="3dp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif"
        android:layout_marginTop="200dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/correct"
        android:text="@string/correct"
        app:layout_constraintTop_toBottomOf="@id/tvResults"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:textSize="50sp"
        android:padding="3dp"
        android:textColor="@color/green"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/outof"
        android:text="@string/outof"
        app:layout_constraintTop_toBottomOf="@id/correct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:padding="3dp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total"
        android:text="@string/total"
        app:layout_constraintTop_toBottomOf="@id/outof"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:textSize="50sp"
        android:padding="3dp"
        android:textColor="@color/green"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Check Answers"
        android:id="@+id/checkAnswersBtn"
        android:layout_marginTop="30dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkAnswersBtn"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/finishBtn"
        android:layout_marginTop="20dp"
        android:text="finish"
    />



</androidx.constraintlayout.widget.ConstraintLayout>